--- a/VetData.Client.Example/VetData.Client.Example.csproj
+++ b/VetData.Client.Example/VetData.Client.Example.csproj
@@ -11,4 +11,9 @@
     <ProjectReference Include="..\VetData.Client\VetData.Client.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
+  </ItemGroup>
+
 </Project>
